kubernetes/apps/kvm/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kvm
  namespace: kvm
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kvm
  namespace: kvm
subsets:
  - addresses:
      - ip: 10.9.0.10
    ports:
      - name: http
        port: 80
