kubernetes/apps/kvm/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kvm
  namespace: kvm
  annotations:
    avp.kubernetes.io/path: "secret/data/kubernetes/config"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kvm.<domain>`)
      kind: Rule
      services:
        - name: kvm
          port: 80
  tls:
    secretName: kvm-tls
